fix navbar spacing

--- a/src/grid.scss
+++ b/src/grid.scss
@@ -30,7 +30,7 @@
 .grid {
   width      : 100%;
   display    : flex;
-  align-items: flex-start;;
+  align-items: flex-start;
   flex-wrap  : wrap;
 
   &:after {
